--- a/audit_history/templates/widget.html
+++ b/audit_history/templates/widget.html
@@ -1,7 +1,11 @@
 <table>
     {% for history in data %}
         <tr>
-            <td>{{ history.timestamp|date:'Y-m-d'}} {{ history.timestamp|time:'H:i:s' }} UTC</td>
+            {% if history.timestamp %}
+                <td>{{ history.timestamp|date:'Y-m-d'}} {{ history.timestamp|time:'H:i:s' }} UTC</td>
+            {% else %}
+                <td>Unsupported timestamp format</td>
+            {% endif %}
             <td>{{ history.actor }}</td>
             <td>{{ history.event }}</td>
             <td>
